# mastiff

./: .envrc  .gitignore  Cargo.toml  LICENSE-AGPL  README.md  flake.nix  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/client/: Cargo.toml  README.md
crates/client/src/: main.rs
crates/index/: Cargo.toml
crates/index/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
deploy/: configuration-aarch64.nix  configuration.nix  flake.nix
experiments/: Snakefile
src/: main.rs
