[workspace]
members = ["crates/server", "crates/client"]
default-members = ["crates/server"]

[workspace.package]
version = "0.1.0"
name = "mastiff"

[workspace.dependencies]
clap = { version = "3.2.8", features = [ "derive" ] }
color-eyre = "0.6.2"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.17"
needletail = "0.4.1"
niffler = { version = "2.4.0", default-features = false, features = [ "gz" ]}
reqwest = { version = "0.11.11", default-features = false, features = [ "blocking", "rustls-tls" ] }
sourmash = { git = "https://github.com/sourmash-bio/sourmash", tag = "mastiff_roaring" }

serde_json = "1.0.83"
# axum deps
axum = { version = "0.5", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "compression-full", "trace", "fs"] }
# observability
sentry = { version = "0.31.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "profiling", "tracing", "tower", "tower-http"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[profile.release]
debug = 1
#lto = true # Enable link-time optimization
