[package]
name = "mastiff-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = [ "derive" ] }
color-eyre = "0.6.2"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.17"
needletail = "0.4.1"
niffler = { version = "2.4.0", default-features = false, features = [ "gz" ]}
reqwest = { version = "0.11.11", default-features = false, features = [ "blocking", "rustls-tls" ] }
sourmash = { git = "https://github.com/sourmash-bio/sourmash", branch = "lirber/mastiff" }

[target.'cfg(target_env = "musl")'.dependencies.jemallocator]
version = "0.5.0"
