[package]
name = "mastiff-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
sourmash.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sentry.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
