[package]
name = "mastiff-server"
version.workspace = true
edition = "2021"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre.workspace = true
sourmash.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sentry.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
